--- a/pocket-ctis/components/WorkUpdates/WorkUpdates.module.scss
+++ b/pocket-ctis/components/WorkUpdates/WorkUpdates.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-.work_updates {margin-bottom: 3em;}
+.work_updates {margin: 3em auto;}
 
 .work_updates_table {
 
