--- a/pocket-ctis/components/WorkUpdates/WorkUpdates.module.scss
+++ b/pocket-ctis/components/WorkUpdates/WorkUpdates.module.scss
@@ -32,3 +32,12 @@
     background-color: aqua;
     background-image: linear-gradient(to bottom right, $light-grey, $medium-grey);
 }
+
+.invisible {
+    background-color: darkgray;
+}
+
+.current {
+    background-color: rgba(196, 255, 196, 0.86);
+}
+
