Add sectors page
Add sectors page, fix date format bug, make backend request parallel

--- a/pocket-ctis/styles/reset.css
+++ b/pocket-ctis/styles/reset.css
@@ -40,7 +40,7 @@ a {
 /* Lists will have inset markers */
 /* Didn't remove markers because this is only a reset */
 ul li, ol li {
-  list-style: inset;
+  /* list-style: inset; */
 }
 
 /* Overlapping table borders */
