Profile page init

--- a/pocket-ctis/components/Navbar/NavigationBar.module.scss
+++ b/pocket-ctis/components/Navbar/NavigationBar.module.scss
@@ -7,6 +7,7 @@
     padding: 0 3em;
     display: flex;
     grid-area: navbar;
+    margin-bottom: 20px;
     
     &_logo {
         font-size: 1.5em;
