--- a/pocket-ctis/components/SearchBar/SearchBar.module.scss
+++ b/pocket-ctis/components/SearchBar/SearchBar.module.scss
@@ -9,12 +9,21 @@
     &_form {
         width: 100%;
         display: flex;
+        align-items: center;
     }
 
     &_bar {
         display: inline-block;
         width: 100%;
         height: 100%;
+        border-radius: 5px;
+        border: 1px solid $dark-grey;
+        padding: 0.8em 1em;
+        outline: none;
+    }
+
+    &_bar_label {
+        margin-right: 1em;
     }
 
     &_button {
@@ -25,6 +34,7 @@
         font-weight: $fw-bold;
         color: $white;
         background-color: $medium-grey;
+        border-radius: 5px;
         transition: background-color 0.3s linear;
         border: none;
         outline: none;
