--- a/pocket-ctis/components/Forms/UserProfileForms/PersonalInformationForm/PersonalInformationForm.module.css
+++ b/pocket-ctis/components/Forms/UserProfileForms/PersonalInformationForm/PersonalInformationForm.module.css
@@ -42,7 +42,7 @@
     transform:scale(1.3);
 }
 .visibilityUnchecked{
-    transform:scale(1.3);
+    /* transform:scale(1.3); */
     color: rgb(245, 164, 37);
 }
 
