--- a/pocket-ctis/components/ErasmusPageComponents/ErasmusUnisList/ErasmusUnisList.module.scss
+++ b/pocket-ctis/components/ErasmusPageComponents/ErasmusUnisList/ErasmusUnisList.module.scss
@@ -50,6 +50,7 @@
     
         &_location {
             font-size: 0.9em;
+            text-transform: capitalize;
             color: $medium-grey;
         }
     
