--- a/pocket-ctis/components/InternshipPageComponents/InternshipsList/InternshipsList.module.scss
+++ b/pocket-ctis/components/InternshipPageComponents/InternshipsList/InternshipsList.module.scss
@@ -45,8 +45,8 @@
             color: $dark-grey;
         }
     
-        &_semester {
-            font-size: 0.9em;
+        &_semester, &_time_period {
+            font-size: 0.8em;
             color: $medium-grey;
         }
     
