multiselect for sectors

--- a/pocket-ctis/components/Forms/UserProfileForms/PersonalInformationForm/PersonalInformationForm.module.css
+++ b/pocket-ctis/components/Forms/UserProfileForms/PersonalInformationForm/PersonalInformationForm.module.css
@@ -15,10 +15,11 @@
     font-size: 13px;
     width: fit-content;
     letter-spacing: 1px;
+    /* z-index: 1; */
     /* opacity: 50%; */
 }
 .inputField:disabled{
-    background-color: white;
+    background-color: #f3f3f3;
     cursor: not-allowed;
 }
 .inputField{
