add admin panel routing and button

--- a/pocket-ctis/components/Navbar/NavigationBar.module.scss
+++ b/pocket-ctis/components/Navbar/NavigationBar.module.scss
@@ -6,6 +6,7 @@
     height: 64px;
     padding: 0 3em;
     display: flex;
+    justify-content: space-between;
     grid-area: navbar;
     margin-bottom: 20px;
     
