--- a/pocket-ctis/components/AdminPanelComponents/AdminUserEditModal/Forms/AdminUserFormStyles.module.css
+++ b/pocket-ctis/components/AdminPanelComponents/AdminUserEditModal/Forms/AdminUserFormStyles.module.css
@@ -19,7 +19,7 @@
     font-size: 13px;
     width: fit-content;
     letter-spacing: 1px;
-    /* z-index: 1; */
+    z-index: 1;
     /* opacity: 50%; */
 }
 .inputField:disabled{
