--- a/pocket-ctis/components/AdminPanelComponents/AdminSidebar/AdminSidebar.module.scss
+++ b/pocket-ctis/components/AdminPanelComponents/AdminSidebar/AdminSidebar.module.scss
@@ -35,6 +35,7 @@
     border-radius: 5px;
     background-color: $light-grey;
     transition: background-color 0.3s linear;
+    margin-top: 15px;
 
     svg{
         width: 1.2em;
