--- a/pocket-ctis/components/AdminPanelComponents/CreateUserForm/CreateUserForm.module.css
+++ b/pocket-ctis/components/AdminPanelComponents/CreateUserForm/CreateUserForm.module.css
@@ -48,9 +48,22 @@
     background-color:#fff1c9;
 }
 
+
+@keyframes errorShow {
+    0%   {height: 0px;}
+    50%  {height: 5px;}
+    70%  {height: 7px;}
+    80%  {height: 8px;}
+    90%  {height: 9px;}
+    100% {height: 10px;}
+  }
+
 .error{
     padding-left: 10px;
+    overflow: hidden;
     color: red;
-    font-style: italic;
     font-size: small;
+    animation: errorShow;
+    animation-duration: 0.1s;
+    animation-timing-function:ease-in-out;
 }
