--- a/pocket-ctis/public/views/activateAdminAccount.hbs
+++ b/pocket-ctis/public/views/activateAdminAccount.hbs
@@ -36,10 +36,11 @@
     </style>
 </head>
 <body>
-<h1>Account Activation</h1>
+<h1>Admin Account Activation</h1>
 <p>{{ name }} {{ surname }},</p>
-<p>Your {{app_name}} account for Bilkent {{department}} has been created! Please click the link below to activate your account now!</p>
-<p><a class="button" href="{{ link }}">Activate Account</a></p>
+<p>Your {{app_name}} account for Bilkent {{department}} has been promoted to an admin acount! Please click the link below to activate your
+admin account!</p>
+<p><a class="button" href="{{ link }}">Activate Admin Account</a></p>
 <p>If you your account has been activated already, please ignore this email.</p>
 <p>Thank you!</p>
 </body>
