--- a/pocket-ctis/components/Navbar/NavigationBar.module.scss
+++ b/pocket-ctis/components/Navbar/NavigationBar.module.scss
@@ -3,12 +3,15 @@
 .navbar {
     background-color: $light-grey;
     width: 100%;
-    height: 64px;
     padding: 0 3em;
     display: flex;
     justify-content: space-between;
-    grid-area: navbar;
     margin-bottom: 20px;
+
+    // NEW CODE
+    position: fixed;
+    height: $navbar-height;
+    z-index: 1;
     
     &_logo {
         font-size: 1.5em;
