--- a/pocket-ctis/styles/globals.scss
+++ b/pocket-ctis/styles/globals.scss
@@ -1,11 +1,95 @@
+@import '/styles/sass/main.scss';
 @import './reset.css';
-@import './variables.scss';
-
-@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Work+Sans&display=swap');
-
-
 
 body {
+    letter-spacing: 0.01em;
+    
+    font-family: $ff-primary;
+    font-size: $fs-regular;
+    font-weight: $fw-regular;
+
+    color: $clr-text;
+    background-color: $clr-bg;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+section {
+    width: 60vw;
+    margin-left: calc(20vw + $margin-xxlarge);
+    margin-top: $navbar-height;
+
+    // this might cause problems
+    position: absolute;
+}
+
+table {
+    border-radius: $border-radius-small;
+    overflow: hidden;
+    box-shadow: 0px 0px 0px 1px $ctis-blue-300;
+    width: 100%;
+
+    th {
+        background-color: $ctis-blue-200;
+        color: $ctis-blue-500;
+        @include secondary-text()
+    }
+
+    th, td { padding: $padding-medium $padding-large; }
+
+    tbody tr {
+        &:nth-of-type(odd) {
+            background-color: $true-white;
+        }
+        &:nth-of-type(even) {
+            background-color: $ctis-blue-50;
+        }
+        &:not(:last-of-type) {
+            border-bottom: 1px solid $ctis-blue-200;
+        }
+    }
+
+    td a {
+        text-decoration: underline;
+        color: inherit;
+        font-weight: $fw-medium;
+
+        @include owo-whats-this() {
+            color: $ctis-blue-400;
+        }
+    }
+}
+
+[class^='user_avatar'] {
+    display: block;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+/* DEBUGGING PURPOSES */
+
+.debug {
+    &-red {
+        border: 1px solid red;
+        background-color: rgba(255, 0, 0, 0.05);
+    }
+
+    &-blue {
+        border: 1px solid blue;
+        background-color: rgba(0, 0, 255, 0.05);
+    }
+}
+
+
+
+/* body {
     color: $black;
     background-color: $white;
     font-size: $fs-regular;
@@ -16,12 +100,12 @@ body {
 }
 
 main {
-    display: grid;
-    grid-template-columns: 20% 60% 20%;
-    grid-template-rows: 64px 1fr;
-    grid-template-areas: 
-        "navbar navbar navbar"
-        "sidebar main empty";
+    position: relative;
+    height: 200vh;
+}
+
+section {
+    
 }
 
 .user_avatar_48 {
@@ -32,4 +116,4 @@ main {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-}
+} */
