--- a/pocket-ctis/styles/sass/abstracts/_fonts.scss
+++ b/pocket-ctis/styles/sass/abstracts/_fonts.scss
@@ -9,8 +9,8 @@ $fs-large: 36px;
 /* FONT FAMILY */
 $ff-primary: 'Fira Sans', 'Arial', sans-serif;
 $ff-secondary: 'Fira Sans Condensed', 'Arial', sans-serif;
-$ff-heading: 'Montserrat', 'Arial Black' sans-serif;
-$ff-ctis: 'Exo 2', 'Arial Black' sans-serif;
+$ff-heading: 'Montserrat', 'Arial Black', sans-serif;
+$ff-ctis: 'Exo 2', 'Arial Black', sans-serif;
 
 /* FONT WEIGHT */
 $fw-regular: 400;
