--- a/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
+++ b/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
@@ -14,6 +14,11 @@
 
     padding: $padding-large $padding-xlarge;
 
+    @include media-query(medium) {
+        top: 0;
+        left: -100vw;
+    }
+
     &_user_avatar {
         margin: auto;
     }
