--- a/pocket-ctis/styles/common.module.scss
+++ b/pocket-ctis/styles/common.module.scss
@@ -105,6 +105,8 @@
 
 .table_wrapper {
     max-width: 100%;
+    border: 1px solid $ctis-blue-300;
+    border-radius: $border-radius-small;
 
     @include media-query(medium) {
         max-width: 80vw;
