--- a/pocket-ctis/components/SearchBar/SearchBar.module.scss
+++ b/pocket-ctis/components/SearchBar/SearchBar.module.scss
@@ -1,36 +1,49 @@
 @import '../../styles/variables.scss';
 
 .search {
-    display: flex;
     width: 100%;
-    margin-left: 1em;
-    height: 2.8em;
     
     &_form {
         width: 100%;
         display: flex;
+        flex-direction: row;
         align-items: center;
+
+        @include media-query(medium) {
+            flex-direction: column;
+            align-items: flex-end;
+        }
     }
 
     &_bar {
         display: inline-block;
         width: 100%;
         height: 100%;
-        border-radius: 5px;
+        border-radius: $border-radius-small;
         border: 1px solid $dark-grey;
         padding: 0.8em 1em;
         outline: none;
     }
 
     &_bar_label {
-        margin-right: 1em;
+        margin-right: $margin-medium;
+        @include secondary-text();
+        
+        @include media-query(medium) {
+            margin: $margin-small 0;
+            width: 100%;
+        }
     }
 
     &_button {
-        margin-left: 1em;
+        margin-left: $margin-medium;
         margin-top: 0;
         height: 100%;
-        padding: 0.6em 2em;
+        padding: $padding-medium $padding-large;
+
+        @include secondary-text();
+
+        // TODO: button component
         font-weight: $fw-bold;
         color: $white;
         background-color: $medium-grey;
@@ -42,6 +55,10 @@
         &:hover {
             background-color: $dark-grey;
             transition: background-color 0.3s linear;
+        }
+
+        @include media-query(medium) {
+            margin: $margin-small 0;
         }
     }
 
