--- a/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
+++ b/pocket-ctis/components/UserInfoSidebar/UserInfoSidebar.module.scss
@@ -1,5 +1,20 @@
 @import '../../styles/variables.scss';
 
+
+.modal_bg {
+    display: none;
+
+    &.visible {
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+}
+
+
 .sidebar {    
     position: fixed;
     top: $navbar-height;
@@ -17,6 +32,13 @@
     @include media-query(medium) {
         top: 0;
         left: -100vw;
+        height: 100vh;
+        max-height: none;
+        box-shadow: none;
+
+        &.visible {
+            left: 0;
+        }
     }
 
     &_user_avatar {
