--- a/pocket-ctis/components/UsersInfoPanel/UsersInfoPanel.module.scss
+++ b/pocket-ctis/components/UsersInfoPanel/UsersInfoPanel.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3em 3.5em;
+    padding: 3em 0;
 
     &_welcome {
        text-align: center;
