--- a/pocket-ctis/styles/globals.scss
+++ b/pocket-ctis/styles/globals.scss
@@ -53,7 +53,7 @@ h2, h3 {
 table {
     border-radius: $border-radius-small;
     overflow: hidden;
-    box-shadow: 0px 0px 0px 1px $ctis-blue-300;
+    //box-shadow: 0px 0px 0px 1px $ctis-blue-300;
     width: 100%;
 
     th {
