--- a/pocket-ctis/styles/addEntities.module.css
+++ b/pocket-ctis/styles/addEntities.module.css
@@ -5,6 +5,7 @@
 .sidebar{
     /* background-color: aqua; */
     width: 200px;
+    min-width: 200px;
     height: 100%;
     border-right: 1px solid #E0E0E0;
     padding-top: 10px;
@@ -29,6 +30,7 @@
 .formBody{
     padding: 10px;
     flex-grow: 1;
+    overflow: scroll;
 }
 .active{
     color: white;
