--- a/pocket-ctis/components/DataTable/DataTable.module.css
+++ b/pocket-ctis/components/DataTable/DataTable.module.css
@@ -83,3 +83,14 @@
     justify-content: center;
     align-items: center;
 }
+
+.actionBtn{
+    border-radius: 50%;
+    padding: 2px;
+    transition: all 0.2s;
+}
+
+.actionBtn:hover{
+    background-color: #a5a5a5;   
+    color: white;
+}
