--- a/pocket-ctis/styles/addEntities.module.css
+++ b/pocket-ctis/styles/addEntities.module.css
@@ -24,7 +24,7 @@
 
 .sidebar div:hover{
     color: white;
-    background-color: rgb(245, 164, 37);
+    background: #262d31;
 }
 
 .formBody{
@@ -34,7 +34,7 @@
 }
 .active{
     color: white;
-    background-color: rgb(245, 164, 37); 
+    background: #262d31;
 }
 .inActive{
     color: #4A9FC2;
