--- a/pocket-ctis/components/DataTable/DataTable.module.css
+++ b/pocket-ctis/components/DataTable/DataTable.module.css
@@ -16,6 +16,54 @@
     align-items: center;
 }
 
+.editBtn{
+    cursor: pointer;
+    float: right;
+    margin-top: 4px;
+    display: inline;
+    background: #e5f3c5;
+    border: 1px solid #46640a;
+    color: #46640a;
+
+    padding-bottom: 3px;
+
+    width: 25px;
+    height: 25px;
+    opacity: 0.8;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.deleteBtn{
+    cursor: pointer;
+    float: right;
+    margin-top: 4px;
+    display: inline;
+    background: #e3c3c3;
+    border: 1px solid #da4109;
+    color: #da4109;
+
+    padding-bottom: 3px;
+
+    width: 25px;
+    height: 25px;
+    opacity: 0.8;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
 .sortContainer{
     display: flex;
     height: 100%;
@@ -47,7 +95,7 @@
     padding: '5px';
     height: 35px;
     border-radius: 15px;
-    border: 1px solid rgb(245, 164, 37);
+    border: 1px solid rgb(52, 46, 35);
     overflow: hidden;
 }
 .searchField input{
