Revert "Merge branch 'backend_3' into style-3"
This reverts commit da7375d47bca9dd796ccd72b381ac78ec7dc1d38, reversing
changes made to eb1033c5b32c8bca7fb9a9b76353dba6f28b514f.

--- a/pocket-ctis/public/views/changeContactEmail.hbs
+++ b/pocket-ctis/public/views/changeContactEmail.hbs
@@ -39,7 +39,7 @@
 <h1>Contact Email Change Request</h1>
 <p>{{ name }} {{ surname }},</p>
 <p>We have received your contact email change request. Please click the button below to confirm your new email.</p>
-<p><a class="button" href="{{ link }}">Confirm</a></p>
+<p><a class="button" href="{{ token }}">Confirm</a></p>
 <p>Thank you!</p>
 </body>
 </html>
