--- a/pocket-ctis/components/GroupByClauseCreator/GroupByClauseCreator.module.css
+++ b/pocket-ctis/components/GroupByClauseCreator/GroupByClauseCreator.module.css
@@ -27,13 +27,26 @@
 }
 .submitButton{
     width: 10%;
-    background-color: rgba(245, 164, 37, 0.2);
-    border: none;
-    color: rgb(245, 164, 37);
     padding: 5px;
     height: 38px;
     border-radius: 4px;
     transition: all 0.1s ease-in-out;
+
+    padding: 8px;
+
+    background: #FFF9E8;
+    opacity: 0.8;
+
+    border: 1px solid #FF8412;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    color: #FF8412;
 }
 .submitButton:hover:not(:disabled){
     padding: 3px;
