--- a/pocket-ctis/components/DataTable/DataTable.module.css
+++ b/pocket-ctis/components/DataTable/DataTable.module.css
@@ -1,3 +1,10 @@
+.clickable{
+    cursor: pointer;
+}
+.clickable:hover td{
+    background-color: rgba(38, 45, 49,0.25);
+}
+
 .tableHeader{
     height: 34px;
     background: #262d31;
