--- a/pocket-ctis/components/EntityDashboards/Dashboard.module.css
+++ b/pocket-ctis/components/EntityDashboards/Dashboard.module.css
@@ -1,3 +1,26 @@
+.modalTable{
+    margin-top: 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+}
+.modalTable th{
+    background: #262d31;
+    padding: 5px 10px;
+    color: white;
+    font-size: 14px;
+}
+.modalTable td{
+    border-bottom: 1px solid #F5F5F5;
+    padding: 5px 10px;
+}
+.modalTable tr:nth-child(even){
+    background-color: rgba(203, 194, 177, 0.36);
+}
+.modalTable tr:nth-child(odd){
+    background-color: rgba(225, 204, 192, 0);
+}
+
 .optionsBtn{
     cursor: pointer;
     float: right;
