--- a/pocket-ctis/styles/adminUsersList.module.css
+++ b/pocket-ctis/styles/adminUsersList.module.css
@@ -10,3 +10,91 @@
 .createUserButton:hover{
     background-color: rgba(245, 164, 37, 0.35);
 }
+
+.optionsBtn{
+    cursor: pointer;
+    float: right;
+    margin-bottom: 10px;
+    display: inline;
+    background: #FFF9E8;
+    border: 1px solid #FF8412;
+    color: #FF8412;
+
+    padding: 8px;
+
+    width: 89px;
+    height: 30px;
+    opacity: 0.8;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+}
+
+.optionsDropdownContainer{
+    position: relative;
+    z-index: 2;
+}
+.optionsDropdown{
+    position: absolute;
+    border: 1px solid #FF8412;
+    background-color: white;
+    right: 0px;
+    top: 35px;
+    z-index: 2;
+    padding: 5px 0;
+    border-radius: 5px;
+}
+.hide{
+    visibility: hidden;
+    display: none;
+}
+.show{
+    visibility: visible;
+}
+
+.optionsList{
+    margin: 0;
+    list-style: none;
+    padding-left: 0;
+    padding: 0
+}
+.optionsList > li{
+    border-bottom: 1px solid #ccc;
+    padding: 5px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+.optionsList > li:hover{
+    background-color: #ccc;
+}
+.optionsList > li:last-child{
+    border-bottom: none;
+}
+
+.modalTable{
+    margin-top: 10px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+}
+.modalTable th{
+    background: #262d31;
+    padding: 5px 10px;
+    color: white;
+    font-size: 14px;
+}
+.modalTable td{
+    border-bottom: 1px solid #F5F5F5;
+    padding: 5px 10px;
+}
+.modalTable tr:nth-child(even){
+    background-color: rgba(203, 194, 177, 0.36);
+}
+.modalTable tr:nth-child(odd){
+    background-color: rgba(225, 204, 192, 0);
+}
