--- a/pocket-ctis/styles/moduleCustomization.module.css
+++ b/pocket-ctis/styles/moduleCustomization.module.css
@@ -19,3 +19,61 @@
 .break{
     margin: 5px 0px;
 }
+
+.section{
+    margin: 15px 0;
+}
+.inputContainer{
+    margin-top: 10px;
+    position: relative;
+}
+
+.inputContainer label {
+    position: absolute;
+    left: 10px;
+    background-color: white;
+    padding: 0px 5px;
+    text-transform: capitalize;
+    color: #888;
+    vertical-align: top;
+    font-size: 13px;
+    height: 1px;
+    line-height: 0px;
+    width: fit-content;
+    letter-spacing: 1px;
+    z-index: 1;
+    border-radius: 5px 5px 0 0;
+}
+
+.inputContainer input{
+    padding: 10px 5px 5px 5px;
+    width: 100%;
+    border: 1px solid #f5a425;
+    border-radius: 4px;
+    resize: none;
+    color: #666;
+}
+
+.saveBtn{
+    padding: 8px;
+
+    width: 89px;
+    height: 30px;
+
+    background: #FFF9E8;
+    opacity: 0.8;
+
+    border: 1px solid #FF8412;
+    border-radius: 5px;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+
+    margin-top: 10px;
+    float: right;
+    color: #FF8412;
+}
